# nats-transport-for-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-simple.yml  docker-compose.yml  docker-example.py  pyproject.toml  start.sh
docs/: README.md  distributed-deployment.md
examples/: callback_example.py  distributed_example.py  simple_example.py
src/: __init__.py  callbacks.py  client.py  client_extensions.py  server.py  server_extensions.py
uns_mcp_nats/: Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  pyproject.toml
uns_mcp_nats/examples/: ai_assisted_workflow.py  simple_workflow.py
uns_mcp_nats/src/uns_mcp_nats/: __init__.py  __main__.py  client.py  config.py  server.py
uns_mcp_nats/src/uns_mcp_nats/connectors/: __init__.py
uns_mcp_nats/src/uns_mcp_nats/connectors/destination/: __init__.py  mongo.py
uns_mcp_nats/src/uns_mcp_nats/connectors/source/: __init__.py  s3.py
uns_nats_integration/: Dockerfile.client  Dockerfile.server  README.md  client.py  config.py  docker-compose.yml  requirements.txt  server.py
uns_nats_integration/connectors/: __init__.py
uns_nats_integration/examples/: README.md  simple_workflow.py
